--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-chart total="2354" segment="1500" title="Classic"></ngx-chart>
+    <ngx-categories-card total="2354" segment="1500" title="Classic"></ngx-categories-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-chart total="2354" segment="354" title="Veggie"></ngx-chart>
+    <ngx-categories-card total="2354" segment="354" title="Veggie"></ngx-categories-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-chart total="2354" segment="500" title="Family"></ngx-chart>
+    <ngx-categories-card total="2354" segment="500" title="Family"></ngx-categories-card>
   </div>
 </div>
