--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -1,13 +1,5 @@
 <div class="row">
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-people-card total="2354" segment="1500" title="Classic"></ngx-people-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-people-card total="2354" segment="354" title="Veggie"></ngx-people-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-people-card total="2354" segment="500" title="Family"></ngx-people-card>
+  <div class="col-xxxl-2 col-md-6">
+    <ngx-people-card avatar="https://scontent.xx.fbcdn.net/v/t31.0-1/15025507_10211574874113760_837024796244596595_o.jpg?oh=e8c308f9ec0749eb7ec33a21f529bf1a&oe=5AA79C9E" name="Angel Tsvetkov" gender="MALE"></ngx-people-card>
   </div>
 </div>
