--- a/src/app/pages/items/items.component.html
+++ b/src/app/pages/items/items.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-items-card sellrate="60%" title="Caramelized Shallot Risotto" text="Serves as a Holiday Side Dish or a Regular Main" price="12,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/caramelized-shallot-risotto-3a1e0053.jpg"></ngx-items-card>
+    <ngx-items-card sellrate="60%" status="success" title="Caramelized Shallot Risotto" text="Serves as a Holiday Side Dish or a Regular Main" price="12,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/caramelized-shallot-risotto-3a1e0053.jpg"></ngx-items-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-items-card sellrate="30%" title="Cauliflower Flatbreads" text="Serves as a Holiday Side Dish or a Regular Main" price="9,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/roasted-cauliflower-flatbreads-2969106b.jpg"></ngx-items-card>
+    <ngx-items-card sellrate="30%" status="warning" title="Cauliflower Flatbreads" text="Serves as a Holiday Side Dish or a Regular Main" price="9,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/roasted-cauliflower-flatbreads-2969106b.jpg"></ngx-items-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-items-card sellrate="10%" title="Crispy Chickpea Tacos" text="with Roasted Bell Peppers and Guacamole" price="13,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/crispy-chickpea-tacos-97f65dbf.jpg"></ngx-items-card>
+    <ngx-items-card sellrate="10%" status="danger" title="Crispy Chickpea Tacos" text="with Roasted Bell Peppers and Guacamole" price="13,99$" image="https://s3.eu-central-1.amazonaws.com/botsoft/sample/veggie/crispy-chickpea-tacos-97f65dbf.jpg"></ngx-items-card>
   </div>
 </div>
