--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="form-group row">
       <label class="col-sm-6 form-control-label" for="fb_app_secret">Facebook App Secret</label>
-      <input id="fb_app_secret" class="form-control" type="text">
+      <input id="fb_app_secret" class="form-control" type="password">
     </div>
     <div class="form-group row">
       <label class="col-sm-6 form-control-label" for="fb_verify_token">Facebook Verify Token</label>
