--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,2 +1,9 @@
-<ngx-login-layout>
-</ngx-login-layout>
+<ngx-blank-layout>
+  <content>
+    <div class="offset-md-5 offset-sm-3" style="margin-top: 10%">
+      <div style="margin-bottom: 50px;"><img src="../../../assets/images/logo.png" style="width: 254px; height: auto" alt=""></div>
+      <div class="fb-login-button" data-scope="public_profile,email" data-max-rows="1" data-size="large" data-button-type="continue_with"
+        data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+    </div>
+  </content>
+</ngx-blank-layout>
