--- a/src/app/pages/fbpages/fbpages.component.html
+++ b/src/app/pages/fbpages/fbpages.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 offset-md-3 col-sm-12 col-lg-6">
       <nb-card [size]="'small'" style="height: 100%">
         <nb-card-header style="text-align:center">
-          Setup Chatbot on Your Facebook Page
+          Select a page to setup your chatbot.
         </nb-card-header>
         <nb-card-body>
           <div class="contact" *ngFor="let fbpage of fbpages">
