--- a/src/app/pages/categories/card/card.component.scss
+++ b/src/app/pages/categories/card/card.component.scss
@@ -1,64 +1,65 @@
 @import '../../../@theme/styles/themes';
-@import '~@nebular/theme/styles/global/bootstrap/breakpoints';
-@import '~bootstrap/scss/mixins/breakpoints';
 
 @include nb-install-component() {
 
-  $padding: 1rem;
-
   nb-card-body {
-    overflow: hidden;
-    padding: $padding;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
   }
 
-  .echart {
-    position: absolute;
-    height: calc(100% - 2 * #{$padding});
-    width: 40%;
-  }
-
-  .info {
-    margin-left: 45%;
-    padding-top: 1.5rem;
-    color: nb-theme(color-fg);
-  }
-
-  .value {
-    font-family: nb-theme(font-secondary);
-    font-size: 2rem;
-    font-weight: nb-theme(font-weight-bold);
-    color: nb-theme(color-fg-heading);
+  .picture {
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    border-top-left-radius: nb-theme(card-border-radius);
+    border-top-right-radius: nb-theme(card-border-radius);
+    flex: 1;
   }
 
   .details {
-    font-size: 1.25rem;
-    font-weight: nb-theme(font-weight-bolder);
-    line-height: 1;
-    span {
-      font-size: 1rem;
+    padding: 1.25rem 1.25rem 0;
+
+    .title {
+      font-family: nb-theme(font-secondary);
+      font-weight: nb-theme(font-weight-bold);
+      color: nb-theme(color-fg-heading);
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+
+      @include nb-for-theme(cosmic) {
+        font-weight: nb-theme(font-weight-bolder);
+      }
+    }
+
+    .description {
+      text-align: justify;
+      color: nb-theme(color-fg-text);
       font-weight: nb-theme(font-weight-light);
+
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-height: calc(1rem * 8 * #{nb-theme(line-height)});
     }
   }
 
-  .text-hint {
-    font-size: 1rem;
-  }
+  nb-card-footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 0.75rem 0;
+    border: none;
 
-  @include nb-for-theme(cosmic) {
-    color: nb-theme(color-fg-heading);
-
-    .value {
-      color: nb-theme(color-fg-highlight);
-    }
-
-    .details span {
+    a {
+      text-decoration: none;
       color: nb-theme(color-fg);
-    }
-  }
 
-  @include media-breakpoint-down(xs) {
-    .value {
-      font-size: 1.75rem;
+      &:hover {
+        color: nb-theme(color-fg-heading);
+      }
+
+      i {
+        font-size: 1.75rem;
+      }
     }
   }
 }
