--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,13 +1,5 @@
 <div class="row">
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-categories-card total="134589" segment="54300" title="Classic"></ngx-categories-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-categories-card total="134589" segment="45700" title="Veggie"></ngx-categories-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-categories-card total="134589" segment="34589" title="Family"></ngx-categories-card>
+  <div class="col-xxxl-3 col-md-6" *ngFor="let category of categories">
+    <ngx-categories-card [image]="category.image_url" [subtitle]="category.subtitle" [title]="category.title"></ngx-categories-card>
   </div>
 </div>
