--- a/src/app/pages/items/card/card.component.html
+++ b/src/app/pages/items/card/card.component.html
@@ -7,19 +7,18 @@
         {{title}}
       </div>
       <div class="description">
-        {{text}}
+        {{subtitle}}
       </div>
     </div>
   </nb-card-body>
 
-
   <nb-card-footer>
     <nb-actions size="medium" fullWidth>
-      <nb-action title="Sell Rate">
+      <!-- <nb-action title="Sell Rate">
         <div class="btn btn-{{status}}">
           {{sellrate}}
         </div>
-      </nb-action>
+      </nb-action> -->
       <nb-action title="Single Price">
         {{price}}
       </nb-action>
