--- a/src/app/pages/images/images.component.html
+++ b/src/app/pages/images/images.component.html
@@ -5,7 +5,8 @@
         <label>{{textField.display_name}}</label>
       </div>
       <div class="col-md-10">
-        <input type="text" [name]="textField.name" size="100" [value]="textField.value">
+        <img [src]="textField.value" alt="Smiley face" height="200" width="382"><br />
+        <input type="text" [name]="textField.name" size="42" [value]="textField.value">
       </div>
     </div>
   </content>
