--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+<div><button class="btn btn-success btn-demo">Create</button></div>
   <div class="col-xxxl-3 col-md-6" *ngFor="let category of categories">
     <ngx-categories-card items_url="#/bot/{{category.bot_id}}/items?category_id={{category.id}}" [image]="category.image_url" [subtitle]="category.subtitle" [title]="category.title"></ngx-categories-card>
   </div>
