--- a/src/app/pages/items/card/card.component.html
+++ b/src/app/pages/items/card/card.component.html
@@ -19,11 +19,14 @@
           {{sellrate}}
         </div>
       </nb-action> -->
+      <nb-action>
+          <a href="#">Edit</a>
+        </nb-action>
       <nb-action title="Single Price">
-        {{price}}
+        <b>{{price}}</b>
       </nb-action>
       <nb-action>
-        <a href="#">Edit</a>
+        <a href="#">Delete</a>
       </nb-action>
     </nb-actions>
   </nb-card-footer>
