--- a/src/app/pages/items/items.component.html
+++ b/src/app/pages/items/items.component.html
@@ -1,3 +1,6 @@
+<div>
+    <button class="btn btn-success btn-create">Create</button>
+</div>
 <div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let item of items">
     <ngx-items-card [price]="item.price+item.currency" [image]="item.image_url" [subtitle]="item.subtitle" [title]="item.title"></ngx-items-card>
