--- a/src/app/pages/items/card/card.component.html
+++ b/src/app/pages/items/card/card.component.html
@@ -20,13 +20,13 @@
         </div>
       </nb-action> -->
       <nb-action>
-          <a href="#">Edit</a>
+          <a href="#/bot/{{botId}}/item?category_id={{category_id}}&id={{item_id}}">Edit</a>
         </nb-action>
       <nb-action title="Single Price">
         <b>{{price}}</b>
       </nb-action>
       <nb-action>
-        <a href="#">Delete</a>
+          <a class="pointer" (click)="delete()">Delete</a>
       </nb-action>
     </nb-actions>
   </nb-card-footer>
