--- a/src/app/pages/create-item/create-item.component.scss
+++ b/src/app/pages/create-item/create-item.component.scss
@@ -38,8 +38,21 @@
     margin: 0 10px 20px 0;
   }
 
+  .btn-category {
+    margin-top: 8px;
+    margin-right: 10px;
+  }
+
   .disabled {
     background-color: #f3f3f5;
+  }
+
+  .dropdown, .dropup, .btn-group {
+    margin-bottom: 1rem;
+  }
+
+  nb-card-body {
+    overflow: visible;
   }
 
 }
