--- a/src/app/pages/items/items.component.html
+++ b/src/app/pages/items/items.component.html
@@ -1,8 +1,9 @@
 <div>
-    <a href="#/bot/{{botId}}/item" class="btn btn-success btn-create">Create</a>
+  <a href="#/bot/{{botId}}/item{{categoryId?'?category_id=' + categoryId:''}}" class="btn btn-success btn-create">Create</a>
 </div>
 <div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let item of items">
-    <ngx-items-card (messageEvent)="receiveDeleteMessage($event)" [price]="item.price+item.currency" [item_id]="item?.id" [category_id]="item?.category_id" [image]="item.image_url" [subtitle]="item.subtitle" [title]="item.title"></ngx-items-card>
+    <ngx-items-card (messageEvent)="receiveDeleteMessage($event)" [price]="item.price+item.currency" [item_id]="item?.id" [category_id]="item?.category_id"
+      [image]="item.image_url" [subtitle]="item.subtitle" [title]="item.title"></ngx-items-card>
   </div>
 </div>
