--- a/src/app/pages/create-item/create-item.component.html
+++ b/src/app/pages/create-item/create-item.component.html
@@ -67,7 +67,7 @@
       <div class="col-md-10">
         <input type="text" size="100" [ngModel]="item?.image_url" (ngModelChange)="item.image_url = $event" [value]="item?.image_url || ''">
         <br />
-        <img *ngIf="item?.image_url" [src]="item?.image_url" height="200" width="382">
+        <img *ngIf="item?.image_url" [src]="item?.image_url" height="auto" width="382">
       </div>
     </div>
   </content>
