--- a/src/app/pages/fbpages/fbpages.component.html
+++ b/src/app/pages/fbpages/fbpages.component.html
@@ -8,7 +8,7 @@
         <nb-card-body>
           <div class="contact" *ngFor="let fbpage of fbpages">
             <nb-user [name]="fbpage.name" [title]="fbpage.category" picture="http://graph.facebook.com/{{ fbpage.id }}/picture" size="large"></nb-user>
-            <i *ngIf="!fbpage.hasBotInstalled" class="i-contact ion-ios-download-outline" (click)="setup(fbpage.id, fbpage.access_token)"></i>
+            <i *ngIf="!fbpage.hasBotInstalled" class="i-contact ion-ios-download-outline" (click)="setup(fbpage.id, fbpage.name, fbpage.access_token)"></i>
             <a *ngIf="fbpage.hasBotInstalled" href="#/bot/{{fbpage.id}}"><i class="i-contact ion-ios-gear-outline" style="color:#42db7c"></i></a>
           </div>
         </nb-card-body>
