--- a/src/app/pages/orders/card/card.component.html
+++ b/src/app/pages/orders/card/card.component.html
@@ -20,7 +20,7 @@
   <nb-card-footer>
     <nb-actions size="medium" fullWidth>
       <nb-action>
-        <a href="#">Done</a>
+        <a class="pointer" (click)="setStatus('Done')">Done</a>
       </nb-action>
     </nb-actions>
   </nb-card-footer>
