--- a/src/app/pages/orders/card/card.component.scss
+++ b/src/app/pages/orders/card/card.component.scss
@@ -43,6 +43,10 @@
     }
   }
 
+  .pointer {
+    cursor: pointer;
+  }
+
   nb-card-footer {
     display: flex;
     justify-content: space-around;
