Remove pages button and reformat the menu

--- a/src/app/@theme/layouts/main/main.layout.html
+++ b/src/app/@theme/layouts/main/main.layout.html
@@ -4,13 +4,13 @@
   </nb-layout-header>
 
   <nb-sidebar class="menu-sidebar" tag="menu-sidebar" responsive [right]="sidebar.id === 'right'">
-    <nb-sidebar-header>
+    <!-- <nb-sidebar-header>
       <a href="#" class="btn btn-info main-btn pointer">
         <i class="ion ion-ios-undo-outline">
         </i>
         <span>Pages</span>
       </a>
-    </nb-sidebar-header>
+    </nb-sidebar-header> -->
     <ng-content select="nb-menu"></ng-content>
   </nb-sidebar>
 
