--- a/src/app/@theme/layouts/main/main.layout.scss
+++ b/src/app/@theme/layouts/main/main.layout.scss
@@ -37,10 +37,11 @@
     cursor: pointer;
   }
   nb-sidebar.menu-sidebar {
-    margin-top: nb-theme(sidebar-header-gap);
+    // margin-top: nb-theme(sidebar-header-gap);
     /deep/ .main-container {
       height : calc(#{nb-theme(sidebar-height)} - #{nb-theme(header-height)} - #{nb-theme(sidebar-header-gap)}) !important;
-      border-top-right-radius: nb-theme(radius);
+      // border-top-right-radius: nb-theme(radius);
+      border-top-right-radius: 0;
     }
     /deep/ nb-sidebar-header {
       padding-bottom: 0.5rem;
