--- a/src/app/pages/categories/modal/modal.component.html
+++ b/src/app/pages/categories/modal/modal.component.html
@@ -5,10 +5,17 @@
   </button>
 </div>
 <div class="modal-body">
-  <div>Your chatbot is created. Let's customize it!</div><br />
-  <div><span style="color: #3edc7e;">✔</span> Chatbot Created</div>
-  <div><span style="color: #3edc7e;">✔</span> Sample Data Added</div>
+  <div>Your chatbot is created. Let's customize it!</div>
+  <br />
+  <div>
+    <span style="color: #3edc7e;">✔</span> Chatbot Created</div>
+  <div>
+    <span style="color: #3edc7e;">✔</span> Sample Data Added</div>
+  <div class="fb-send-to-messenger" messenger_app_id="498860363814397" [attr.page_id]="pageId" data-ref color="blue"
+    size="xlarge">
+  </div>
 </div>
+
 <div class="modal-footer">
   <button class="btn btn-md btn-success" (click)="closeModal()">Customize It</button>
 </div>
