--- a/src/app/pages/categories/modal/modal.component.html
+++ b/src/app/pages/categories/modal/modal.component.html
@@ -11,9 +11,9 @@
     <span style="color: #3edc7e;">✔</span> Chatbot Created</div>
   <div>
     <span style="color: #3edc7e;">✔</span> Sample Data Added</div>
-  <div class="fb-send-to-messenger" messenger_app_id="498860363814397" [attr.page_id]="pageId" data-ref color="blue"
-    size="large">
-  </div>
+
+    <div class="fb-send-to-messenger" messenger_app_id="498860363814397" [attr.page_id]="pageId" data-ref color="blue" size="large">
+      </div>
 </div>
 
 <div class="modal-footer">
