--- a/src/app/pages/categories/modal/modal.component.html
+++ b/src/app/pages/categories/modal/modal.component.html
@@ -10,8 +10,8 @@
   <div>
     <span style="color: #3edc7e;">✔</span> Chatbot Created</div>
   <div>
-    <span style="color: #3edc7e;">✔</span> Sample Data Added</div>
-
+    <span style="color: #3edc7e;">✔</span> Sample Data Added</div><br />
+    <div>Test your bot on <a href="https://m.me/{{pageId}}" target="_blank">https://m.me/{{pageId}}</a></div>
     <div class="fb-send-to-messenger" messenger_app_id="498860363814397" [attr.page_id]="pageId" data-ref color="blue" size="large">
       </div>
 </div>
