--- a/src/app/@theme/layouts/blank/blank.layout.html
+++ b/src/app/@theme/layouts/blank/blank.layout.html
@@ -1,5 +1,5 @@
-<nb-layout>
-  <nb-layout-column>
+<nb-layout windowMode>
+  <nb-layout-column class="main-content">
     <ng-content select="content"></ng-content>
   </nb-layout-column>
 </nb-layout>
