--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,17 +1,17 @@
 <div class="header-container" [class.left]="position === 'normal'" [class.right]="position === 'inverse'">
   <div class="logo-containter">
-    <a (click)="toggleSidebar()" href="#" class="navigation">
+    <!-- <a (click)="toggleSidebar()" href="#" class="navigation">
       <i class="nb-menu"></i>
-    </a>
+    </a> -->
     <div class="logo">
-      <img src="https://bot-soft.github.io/www/img/logo.png" style="width: 50%;height: auto;" />
+      <img src="https://bot-soft.github.io/www/img/logo.png" style="min-width:186px;width: 50%;height: auto;" />
     </div>
   </div>
 </div>
-
+<nb-user *ngIf="botInfo?.id" style="width: 30%;" [name]="botInfo?.name" picture="http://graph.facebook.com/{{ botInfo?.id }}/picture" size="large"></nb-user>
 <nb-actions size="medium" class="header-container" [class.right]="position === 'normal'" [class.left]="position === 'inverse'">
   <nb-action>
-    <nb-user [menu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user>
+    <nb-user [menu]="userMenu" [name]="user?.name" [picture]="user?.picture" size="large"></nb-user>
   </nb-action>
   <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
 </nb-actions>
