--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="header-container" [class.left]="position === 'normal'" [class.right]="position === 'inverse'">
   <div class="logo-containter">
-    <!-- <a (click)="toggleSidebar()" href="#" class="navigation">
+    <a (click)="toggleSidebar()" href="#" class="navigation">
       <i class="nb-menu"></i>
-    </a> -->
+    </a>
     <div class="logo">
-      <img src="https://bot-soft.github.io/www/img/logo.png" style="min-width:186px;width: 50%;height: auto;" />
+      <a href="/#/pages"><img src="https://bot-soft.github.io/www/img/logo.png" style="min-width:186px;width: 50%;height: auto;" /></a>
     </div>
   </div>
 </div>
