--- a/src/app/pages/create-item/create-item.component.scss
+++ b/src/app/pages/create-item/create-item.component.scss
@@ -52,7 +52,61 @@
   }
 
   nb-card-body {
-    overflow: visible;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    padding-bottom: 10px;
   }
+  .picture {
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    border-top-left-radius: nb-theme(card-border-radius);
+    border-top-right-radius: nb-theme(card-border-radius);
+    flex: 1;
+  }
+  .details {
+    padding: 1.25rem 1.25rem 0;
+    .title {
+      font-family: nb-theme(font-secondary);
+      font-weight: nb-theme(font-weight-bold);
+      color: nb-theme(color-fg-heading);
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      @include nb-for-theme(cosmic) {
+        font-weight: nb-theme(font-weight-bolder);
+      }
+    }
+    .description {
+      text-align: justify;
+      color: nb-theme(color-fg-text);
+      font-weight: nb-theme(font-weight-light);
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-height: calc(1rem * 8 * #{nb-theme(line-height)});
+    }
+  }
+  .pointer {
+    cursor: pointer;
+  }
+  nb-card-footer {
+    display: flex;
+    justify-content: space-around;
+    border-top: 1px solid #eceff5;
+    padding: 0.75rem 0;
+    a {
+      text-decoration: none;
+      color: nb-theme(color-fg);
+      &:hover {
+        color: nb-theme(color-fg-heading);
+      }
+      i {
+        font-size: 1.75rem;
+      }
+    }
+  }
+}
 
+.input-field {
+  padding-top: 20px;
 }
