--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,5 +1,6 @@
 <div>
   <button class="btn btn-success btn-save" (click)="save()">Save</button>
+  <div class="float-right"><button class="btn btn-defualt btn-delete" (click)="delete()">Delete Chatbot</button></div>
 </div>
 <div *ngFor="let textField of textFields" class="row">
   <div class="col-md-2">
